--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to TRL Test (Apache)
 on:
   push:
     branches: ["main"]
-  workflow_dispatch: {}   # allows manual runs from Actions tab
+  workflow_dispatch: {}
 
 permissions:
   contents: read
@@ -24,29 +24,25 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_KEY }}
 
-      - name: Trust server host key
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+      # (Removed the ssh-keyscan step)
 
       - name: Deploy over SSH
+        env:
+          SSH_OPTS: -o StrictHostKeyChecking=accept-new
         run: |
-          ssh -p "${{ secrets.SSH_PORT }}" "${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}" bash -s <<'EOF'
+          ssh $SSH_OPTS -p "${{ secrets.SSH_PORT }}" "${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}" bash -s <<'EOF'
           set -euo pipefail
           cd /var/www/trl.citadelspace.com
 
-          # Update the working copy to the pushed commit
           git fetch origin main
           git reset --hard origin/main
 
-          # If you use Composer, install (safe to leave; it only runs if present)
           if [ -f composer.json ]; then
             composer install --no-dev --prefer-dist --optimize-autoloader
           fi
 
-          # Clear PHP OPcache if available
           php -r 'function_exists("opcache_reset") && opcache_reset();'
 
-          # If you changed Apache/site configs and your deploy user has sudo:
-          # sudo systemctl reload apache2
+          # uncomment if your deploy user has sudo and you changed Apache/site configs:
+          # sudo systemctl reload apache2 || true
           EOF
